# nabchan-mcp-server

./: .gitignore  .gitmodules  Dockerfile  README.md  documents.db  pyproject.toml  test.db
.github/workflows/: ci.yaml  deploy.yaml  lint.yaml
nabchan_mcp_server/: __init__.py  build_index.py  index.py  main.py  search_document.py  settings.py  vector.py
nabchan_mcp_server/db/: connection.py  operations.py
nabchan_mcp_server/search/: factory.py  fts.py  hybrid.py  models.py  vss.py
tests/: db.py  it_mcp_server.py  test_fts.py  test_hybrid.py  test_mcp_server.py  test_vss.py
tools/: build_index.py  operations.py  search_document.py
