[project]
name = "nabchan-mcp-server"
version = "0.1.0"
description = "Nablarchの解説書をもとにしてNablarchの情報を返すMCPサーバーです"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "lindera-py>=0.41.0",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.3",
    "coverage>=7.8.0",
    "diskcache>=5.6.3",
    "html2text>=2024.2.26",
    "isort>=6.0.1",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.12",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
    "taskipy>=1.14.1",
    "tqdm>=4.67.1",
]

[tool.taskipy.tasks]
lint = "ruff format --check && ruff check && pyright"
fix = "isort nabchan_mcp_server tests tools && ruff format && ruff check --fix && pyright"
test = "DB_FILE=test.db python -m unittest discover -s tests"
coverage = "DB_FILE=test.db coverage run -m unittest discover -s tests && coverage report -m -i --include='./*' && coverage html -i --include='./*'"
integration_test = "DB_FILE=test.db python -m unittest discover -s tests -p it_*.py"
all_tests = "task test && task integration_test"
build_test_db = "DB_FILE=test.db python -m tests.db"
